crates/swc_ecma_parser/tests/test262-error-references/fail/edb15336bfbe0a8e.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/edb15336bfbe0a8e.js:1:7
  |
1 | class {}
  |       ^

